--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
+<html>
+
+  <head>
+    <title>Employee Listing</title>
+  </head>
+  <style>
+    .header {
+      margin: auto;
+
+    }
+
+    .header_logo {
+      width: 20%;
+      max-width: 200px;
+    }
+
+    .header_greeting {
+      font-size: 30px;
+    }
+
+  </style>
+
+  <body>
+
+    <!--Header-->
+    <div class="header">
+      <div class="header_logo"><img src="Images/logo kv2021.jpg"></div>
+      <div class="header_greeting">
+        Employee Listing
+      </div>
+    </div>
+
+    <!--Menu-->
+
+    <!--Content-->
+
+    <!--Footer-->
+
+  </body>
+
+</html>
 
