--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   </head>
   <style>
     .header {
-      margin: auto;
 
     }
 
     .header_logo {
+      margin: auto;
       width: 20%;
+      max-width: 200px;
     }
 
     .header_greeting {
