--- a/index.html
+++ b/index.html
@@ -5,14 +5,45 @@
   </head>
   <style>
     .header {
-
+      margin: auto;
+      width: 100%;
+      background-color: rgb(222, 184, 135);
+      padding-bottom: 20px;
+      overflow: hidden;
     }
 
     .header_logo {
+      width: 20%;
+      max-width: 200px;
     }
 
     .header_greeting {
       font-size: 30px;
+      text-align: center;
+      float: left;
+    }
+
+    .menu {
+      background-color: coral;
+      margin: auto;
+    }
+
+    ul {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+
+    li {
+      list-style-type: none;
+      float: left;
+    }
+
+    a {
+      text-decoration: none;
+      display: block;
+      padding: 20px;
+      color: white;
     }
 
   </style>
@@ -28,12 +59,22 @@
     </div>
 
     <!--Menu-->
+    <div class="menu">
+      <ul>
+        <li><a href="#">Index</a></li>
+        <li><a href="#">List</a></li>
+        <li><a href="#">Login</a></li>
+      </ul>
+    </div>
+
 
     <!--Content-->
+    <div class="kadungan">
+    
+    </div>
 
     <!--Footer-->
 
   </body>
 
 </html>
-
