--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       overflow: hidden;
     }
 
-    .header_logo img{
+    .header_logo img {
       width: 20%;
       max-width: 200px;
     }
@@ -46,6 +46,19 @@
       color: white;
     }
 
+    .kandungan {
+      margin: auto;
+      text-align: center;
+    }
+
+    .orang {
+      margin: auto;
+      text-align: center;
+      border-style: solid;
+      margin-top: 20px;
+      width: 50%;
+    }
+
   </style>
 
   <body>
@@ -69,8 +82,62 @@
 
 
     <!--Content-->
-    <div class="kadungan">
-    
+    <div class="kandungan">
+      <h1>Index</h1>
+      <input type="text" class="form">
+      <input type="submit" value="Search" class="cari">
+      <input type="reset" class="padam">
+
+      <table class="orang">
+        <tr>
+          <th>Bil.</th>
+          <th>Nama</th>
+          <th>Jantina</th>
+          <th>Jabatan</th>
+          <th>Gaji</th>
+        </tr>
+
+        <tr>
+          <td>1</td>
+          <td>Muhammad Abu</td>
+          <td>Lelaki</td>
+          <td>Perniagaan</td>
+          <td>RM1500</td>
+        </tr>
+
+        <tr>
+          <td>2</td>
+          <td>Muhammad Ali</td>
+          <td>Lelaki</td>
+          <td>Komputer</td>
+          <td>RM1701</td>
+        </tr>
+
+        <tr>
+          <td>3</td>
+          <td>Nurul Timah</td>
+          <td>Perempuan</td>
+          <td>Perniagaan</td>
+          <td>RM2002</td>
+        </tr>
+
+        <tr>
+          <td>4</td>
+          <td>Siti Semah</td>
+          <td>Perempuan</td>
+          <td>Perniagaan</td>
+          <td>RM1500</td>
+        </tr>
+
+        <tr>
+          <td>5</td>
+          <td>Nur Zila</td>
+          <td>Perempuan</td>
+          <td>Komputer</td>
+          <td>RM1701</td>
+        </tr>
+
+      </table>
     </div>
 
     <!--Footer-->
