--- a/index.html
+++ b/index.html
@@ -53,10 +53,32 @@
 
     .orang {
       margin: auto;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 10px;
+      padding-right: 10px;
       text-align: center;
-      border-style: solid;
+      border: solid;
       margin-top: 20px;
       width: 50%;
+    }
+    
+    th{
+      border-style: solid;
+      border-width: 1px;
+    }
+    
+    td {
+      border-style: solid;
+      border-width: 1px;
+    }
+    .kaki {
+      border: solid;
+      text-align: center;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      margin-top: 20px;
+      background-color: rgb(210,180,140)
     }
 
   </style>
@@ -141,6 +163,9 @@
     </div>
 
     <!--Footer-->
+    <div class="kaki">
+    Copyright &copy; Syarikat ABC,2021
+    </div>
 
   </body>
 
