--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <!--Menu-->
     <div class="menu">
       <ul>
-        <li><a href="#">Index</a></li>
+        <li><a href="index.html">Index</a></li>
         <li><a href="#">List</a></li>
         <li><a href="#">Login</a></li>
       </ul>
