--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 
     .header_greeting {
       font-size: 30px;
-      text-align: center;
       float: left;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      padding-left: 30px;
     }
 
     .menu {
