--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     }
 
     .header_logo img {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 15px;
       width: 20%;
       max-width: 200px;
     }
