--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <style>
     .header {
       margin: auto;
-      width: 100%;
       background-color: rgb(222, 184, 135);
       padding-bottom: 20px;
       overflow: hidden;
@@ -18,6 +17,7 @@
       padding-left: 15px;
       width: 20%;
       max-width: 200px;
+      float: left;
     }
 
     .header_greeting {
