--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
       padding: 20px;
       color: white;
     }
+    
+     li.hover {
+      background-color: antiquewhite;
+    }
+
+    a.hover {
+      color: black;
+    }
 
     .kandungan {
       margin: auto;
