--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
       color: white;
     }
     
-     li.hover {
+     li:hover {
       background-color: antiquewhite;
     }
 
-    a.hover {
+    a:hover {
       color: black;
     }
 
