--- a/list.html
+++ b/list.html
@@ -1,1 +1,107 @@
+<html>
 
+  <head>
+    <title>Employee Listing</title>
+  </head>
+  <style>
+    .header {
+      margin: auto;
+      background-color: rgb(222, 184, 135);
+      padding-bottom: 20px;
+      overflow: hidden;
+    }
+
+    .header_logo img {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 15px;
+      width: 20%;
+      max-width: 200px;
+      float: left;
+    }
+
+    .header_greeting {
+      font-size: 30px;
+      float: left;
+      padding-top: 30px;
+      padding-bottom: 20px;
+      padding-left: 20px;
+    }
+
+    .menu {
+      background-color: coral;
+      margin: auto;
+    }
+
+    ul {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+
+    li {
+      list-style-type: none;
+      float: left;
+    }
+
+    a {
+      text-decoration: none;
+      display: block;
+      padding: 20px;
+      color: white;
+    }
+
+    li.hover {
+      background-color: antiquewhite;
+    }
+
+    a.hover {
+      color: black;
+    }
+
+    .kandungan {
+      ;
+    }
+
+  </style>
+
+  <body>
+
+    <!--Header-->
+    <div class="header">
+      <div class="header_logo"><img src="Images/logo kv2021.jpg"></div>
+      <div class="header_greeting">
+        Employee Listing
+      </div>
+    </div>
+
+    <!--Menu-->
+    <div class="menu">
+      <ul>
+        <li><a href="index.html">Index</a></li>
+        <li><a href="#">List</a></li>
+        <li><a href="#">Login</a></li>
+      </ul>
+    </div>
+
+    <!--content-->
+    <div class="kandungan">
+      <h1>List</h1>
+
+      <b>Perniagaan</b>
+      <ol>
+        <li>Muhammad Abu</li>
+        <li>Nurul Timah</li>
+        <li>Siti Semah</li>
+      </ol>
+
+      <b>Komputer</b>
+      <ol>
+        <li>Muhammad Ali</li>
+        <li>Nur Zila</li>
+      </ol>
+    </div>
+
+  </body>
+
+</html>
