--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="menu">
       <ul>
         <li><a href="index.html">Index</a></li>
-        <li><a href="#">List</a></li>
+        <li><a href="list.html">List</a></li>
         <li><a href="#">Login</a></li>
       </ul>
     </div>
