--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
     <!--Content-->
     <div class="kandungan">
       <h1>Index</h1>
-      <input type="text" class="form">
-      <input type="submit" value="Search" class="cari">
-      <input type="reset" class="padam">
+      <input type="text">
+      <input type="submit" value="Search">
+      <input type="reset">
 
       <table class="orang">
         <tr>
