--- a/login.html
+++ b/login.html
@@ -71,17 +71,18 @@
       padding-bottom: 10px;
     }
     .p1 {
-      margin: auto;
+      text-align: center;
     }
       .p2 {
-      margin: auto;
+      text-align: center;
     }
       .p3 {
-      margin: auto;
+      text-align: center;
     }
     
     .masuk {
       margin-right: 5px;
+      text-align: center;
     }
     
     .kaki {
