--- a/login.html
+++ b/login.html
@@ -66,9 +66,10 @@
     
     .table1 {
       border: solid;
-      width: 50%;
+      width: 40%;
       margin: auto;
       padding-bottom: 10px;
+          padding-top: 10px;
     }
     .p1 {
       text-align: center;
