--- a/login.html
+++ b/login.html
@@ -60,9 +60,11 @@
     
     .kandungan {
       margin: auto;
-      margin-bottom: ;
       text-align: center;
     }
+      a{
+            margin: 0;
+      }
     
     .table1 {
       border: solid;
