--- a/list.html
+++ b/list.html
@@ -1,5 +1,4 @@
 <html>
-
   <head>
     <title>Employee Listing</title>
   </head>
@@ -88,21 +87,19 @@
     <!--content-->
     <div class="kandungan">
       <h1>List</h1>
-
-      <b>Perniagaan</b>
-      <ol>
-        <li>Muhammad Abu</li>
-        <li>Nurul Timah</li>
-        <li>Siti Semah</li>
-      </ol>
-
-      <b>Komputer</b>
-      <ol>
-        <li>Muhammad Ali</li>
-        <li>Nur Zila</li>
-      </ol>
+      <ul>
+        <li> Perniagaan
+          <ol>
+            <li>Muhammad Abu</li>
+            <li>Nurul Timah</li>
+            <li>Siti Semah</li>
+          </ol>
+        <li> Komputer
+          <ol>
+            <li>Muhammad Ali</li>
+            <li>Nur Zila</li>
+          </ol>
+      </ul>
     </div>
-
   </body>
-
 </html>
