--- a/list.html
+++ b/list.html
@@ -1,69 +1,92 @@
 <html>
+
   <head>
     <title>Employee Listing</title>
+    <style>
+      .header {
+        margin: auto;
+        background-color: rgb(222, 184, 135);
+        padding-bottom: 20px;
+        overflow: hidden;
+      }
+
+      .header_logo img {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 15px;
+        width: 20%;
+        max-width: 200px;
+        float: left;
+      }
+
+      .header_greeting {
+        font-size: 30px;
+        float: left;
+        padding-top: 30px;
+        padding-bottom: 20px;
+        padding-left: 20px;
+      }
+
+      .menu {
+        background-color: coral;
+        margin: auto;
+      }
+
+      ul {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
+
+      li {
+        list-style-type: none;
+        float: left;
+      }
+
+      a {
+        text-decoration: none;
+        display: block;
+        padding: 20px;
+        color: white;
+      }
+
+      li:hover {
+        background-color: antiquewhite;
+      }
+
+      a:hover {
+        color: black;
+        font-weight: bold;
+      }
+
+      .kandungan {
+        margin: auto;
+        text-align: center;
+      }
+
+      ul {
+        text-align: center;
+      }
+
+      li {
+        text-align: center;
+      }
+
+      ol {
+        text-align: center;
+      }
+
+      .kaki {
+        border: solid;
+        text-align: center;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin-top: 10px;
+        background-color: rgb(210, 180, 140)
+      }
+
+    </style>
   </head>
-  <style>
-    .header {
-      margin: auto;
-      background-color: rgb(222, 184, 135);
-      padding-bottom: 20px;
-      overflow: hidden;
-    }
-
-    .header_logo img {
-      padding-top: 10px;
-      padding-bottom: 10px;
-      padding-left: 15px;
-      width: 20%;
-      max-width: 200px;
-      float: left;
-    }
-
-    .header_greeting {
-      font-size: 30px;
-      float: left;
-      padding-top: 30px;
-      padding-bottom: 20px;
-      padding-left: 20px;
-    }
-
-    .menu {
-      background-color: coral;
-      margin: auto;
-    }
-
-    ul {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-    }
-
-    li {
-      list-style-type: none;
-      float: left;
-    }
-
-    a {
-      text-decoration: none;
-      display: block;
-      padding: 20px;
-      color: white;
-    }
-
-    li.hover {
-      background-color: antiquewhite;
-    }
-
-    a.hover {
-      color: black;
-    }
-
-    .kandungan {
-      margin: auto;
-      text-align: center;
-    }
-
-  </style>
 
   <body>
 
@@ -84,7 +107,7 @@
       </ul>
     </div>
 
-    <!--content-->
+    <!--Content-->
     <div class="kandungan">
       <h1>List</h1>
       <ul>
@@ -101,5 +124,10 @@
           </ol>
       </ul>
     </div>
+    <!--Footer-->
+    <div class="kaki">
+      Copyright &copy; Syarikat ABC,2021
+    </div>
   </body>
+
 </html>
