--- a/login.html
+++ b/login.html
@@ -81,10 +81,12 @@
 
       .p1 {
         text-align: center;
+        padding-bottom: 5px;
       }
 
       .p2 {
         text-align: center;
+        padding-bottom: 5px;
       }
 
       .p3 {
