--- a/list.html
+++ b/list.html
@@ -58,23 +58,19 @@
         color: black;
         font-weight: bold;
       }
-
+      
       .kandungan {
-        margin: auto;
-        text-align: center;
-      }
+      list-style-type: ;
+    }
 
-      ul {
-        text-align: center;
-      }
+     h1 {
+      text-align: center;
+    }
 
-      li {
-        text-align: center;
-      }
-
-      ol {
-        text-align: center;
-      }
+    ul {
+      list-style-type: none;
+      padding-left: 30%;
+    }
 
       .kaki {
         border: solid;
@@ -124,6 +120,7 @@
           </ol>
       </ul>
     </div>
+    
     <!--Footer-->
     <div class="kaki">
       Copyright &copy; Syarikat ABC,2021
