--- a/list.html
+++ b/list.html
@@ -102,22 +102,26 @@
         <li><a href="login.html">Login</a></li>
       </ul>
     </div>
-
-    <!--Content-->
+    
+    <!--CONTENT-->
     <div class="kandungan">
       <h1>List</h1>
       <ul>
-        <li> Perniagaan
-          <ol>
-            <li>Muhammad Abu</li>
-            <li>Nurul Timah</li>
-            <li>Siti Semah</li>
-          </ol>
-        <li> Komputer
-          <ol>
-            <li>Muhammad Ali</li>
-            <li>Nur Zila</li>
-          </ol>
+        <li>
+          <h3>Perniagaan</h3>
+        </li>
+        <ol>
+          <li>Muhammad Abu</li>
+          <li>Nurul Timah</li>
+          <li>Siti Semah</li>
+        </ol>
+        <li>
+          <h3>Komputer</h3>
+        </li>
+        <ol>
+          <li>Muhammad Ali</li>
+          <li>Nur Zila</li>
+        </ol>
       </ul>
     </div>
     
