--- a/list.html
+++ b/list.html
@@ -38,7 +38,7 @@
       margin: auto;
     }
 
-    .menu ul {
+    ul {
       margin: 0;
       padding: 0;
       overflow: hidden;
@@ -46,13 +46,13 @@
       color: white;
     }
 
-    .menu li {
+    li {
       list-style-type: none;
       float: left;
       color: white;
     }
 
-    .menu a {
+    a {
       text-decoration: none;
       display: block;
       padding: 20px;
@@ -65,6 +65,7 @@
 
     .menu a:hover {
       color: black;
+      font-weight: bold;
     }
 
     .kandungan {
