--- a/list.html
+++ b/list.html
@@ -96,7 +96,7 @@
 
     <!--Header-->
     <div class="header">
-      <div class="header_logo"><img src="images/logo kv2021.jpg"></div>
+      <div class="header_logo"><img src="Images/logo kv2021.jpg"></div>
       <div class="header_greeting">
         Employee Listing
       </div>
