--- a/list.html
+++ b/list.html
@@ -33,40 +33,36 @@
     }
 
     .menu {
-      background-color: coral;
-      color: white;
-      margin: auto;
-    }
+        background-color: coral;
+        margin: auto;
+      }
 
-    ul {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      background-color: coral;
-      color: white;
-    }
+      ul {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
 
-    li {
-      list-style-type: none;
-      float: left;
-      color: white;
-    }
+      li {
+        list-style-type: none;
+        float: left;
+      }
 
-    a {
-      text-decoration: none;
-      display: block;
-      padding: 20px;
-      color: white;
-    }
+      a {
+        text-decoration: none;
+        display: block;
+        padding: 20px;
+        color: white;
+      }
 
-    .menu li:hover {
-      background-color: antiquewhite;
-    }
+      li:hover {
+        background-color: antiquewhite;
+      }
 
-    .menu a:hover {
-      color: black;
-      font-weight: bold;
-    }
+      a:hover {
+        color: black;
+        font-weight: bold;
+      }
 
     .kandungan {
       list-style-type: ;
