--- a/list.html
+++ b/list.html
@@ -33,36 +33,40 @@
     }
 
     .menu {
-        background-color: coral;
-        margin: auto;
-      }
+      background-color: coral;
+      color: white;
+      margin: auto;
+    }
 
-      ul {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
+    .menu ul {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: coral;
+      color: white;
+    }
 
-      li {
-        list-style-type: none;
-        float: left;
-      }
+    .menu li {
+      list-style-type: none;
+      float: left;
+      color: white;
+    }
 
-      a {
-        text-decoration: none;
-        display: block;
-        padding: 20px;
-        color: white;
-      }
+    .menu a {
+      text-decoration: none;
+      display: block;
+      padding: 20px;
+      color: white;
+    }
 
-      li:hover {
-        background-color: antiquewhite;
-      }
+    .menu li:hover {
+      background-color: antiquewhite;
+    }
 
-      a:hover {
-        color: black;
-        font-weight: bold;
-      }
+    .menu a:hover {
+      color: black;
+      font-weight: bold;
+    }
 
     .kandungan {
       list-style-type: ;
@@ -90,9 +94,9 @@
 
   <body>
 
-    <!--Header-->
+     <!--Header-->
     <div class="header">
-      <div class="header_logo"><img src="Images/logo kv2021.jpg"></div>
+      <div class="header_logo"><img src="images/logo kv2021.jpg"></div>
       <div class="header_greeting">
         Employee Listing
       </div>
